--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.2.17",
     "multer": "^1.3.1",
+    "vhost": "^3.0.2",
     "xls-to-json-lc": "^0.3.4",
     "xlsx-to-json-lc": "^0.5.0"
   }
